fix views count not showing on knowledge creator slide

--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -66,7 +66,7 @@
     }
 
     @media only screen and (max-width: 480px) {
-      --hero-padding-top: 0rem;
+      --hero-padding-top: 1.2rem;
       height: 70vh;
     }
 
